ALFA 3.4.0 compatible changes