@@ -12,9 +12,11 @@
     </parent>
 
     <properties>
-        <scala.version>2.12.12</scala.version>
+        <scala.version>2.12.17</scala.version>
         <scala.compat.version>2.12</scala.compat.version>
-        <scala-maven-plugin.version>4.2.0</scala-maven-plugin.version>
+        <scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
+        <spark.version>3.4.1</spark.version>
+        <jackson.version>2.15.0</jackson.version>
     </properties>
     
     <dependencies>
@@ -27,7 +29,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-scala_2.12</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson.version}</version>
         </dependency>
         
         <dependency>
@@ -38,28 +40,28 @@
         </dependency>
         
         <dependency>
-            <groupId>io.alfa-lang.rt</groupId>
+            <groupId>com.schemarise.alfa.runtime</groupId>
             <artifactId>alfa-lib-spark</artifactId>
-            <version>2.4.2</version>
+            <version>3.4.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.12</artifactId>
-            <version>2.4.7</version>
+            <version>${spark.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-catalyst_2.12</artifactId>
-            <version>2.4.7</version>
+            <version>${spark.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
-            <version>2.4.7</version>
+            <version>${spark.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -90,6 +92,7 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>WDF TestSuite.txt</filereports>
+                    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                 </configuration>
                 <executions>
                     <execution>
